--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "Ionicons": "ionicons#^2.0.1",
-    "fonts-raleway": "^0.0.4"
+    "fonts-raleway": "^0.0.4",
+    "ngmap": "^1.17.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
